Fix toolbar hover button and scrollbar border indicator

--- a/dotfiles/.config/gtk-3.0/gtk.css
+++ b/dotfiles/.config/gtk-3.0/gtk.css
@@ -1,3 +1,10 @@
+scrolledwindow undershoot.top, 
+scrolledwindow undershoot.right,
+scrolledwindow undershoot.bottom,
+scrolledwindow undershoot.left {
+	background-image: none;
+}
+
 VteTerminal, vte-terminal {
 	padding: 35px;
 }
